# Vulnerable-Skills-Detector

./: PROJECT_SPEC.md  README.md
skill-scanning-crawler/: .gitattributes  .gitignore  AGENTS.md  CRAWLER_DESIGN.md  DATA_CONTRACT.md  FILE_INDEX.md  IMPLEMENTATION_PLAN.md  PART1_FIXES.md  PART2_HANDOFF.md  PROJECT_SCOPE.md  README.md  VALIDATION_POLICY.md  pyproject.toml
skill-scanning-crawler/.cursor/agents/: crawler-architect.md  dataset-contract-reviewer.md  github-api-engineer.md  security-reviewer.md  skill-validation-reviewer.md
skill-scanning-crawler/.cursor/rules/: 00-project-scope.mdc  10-architecture.mdc  20-github-api-rate-limits.mdc  30-data-contracts.mdc  40-skill-validation.mdc  50-security.mdc  60-testing-reproducibility.mdc  70-python-style.mdc
skill-scanning-crawler/config/: discovery.example.yaml  github_queries.yaml  offline_demo.yaml  output_schema.json  validation_policy.yaml
skill-scanning-crawler/data/manifests/: rejected_candidates.jsonl  repositories.jsonl  repositories_ranked_by_stars.jsonl  skills.jsonl  skills_top50.jsonl
skill-scanning-crawler/data/reports/: dataset_statistics.json  discovery_summary.json  part1_summary.json  (+1 more)
skill-scanning-crawler/docs/: crawler_pipeline.md  cursor_workflow.md  data_model.md  deduplication_strategy.md  discovery_strategy.md  evaluation_plan.md  open_questions_for_ta.md  problem_area.md  rate_limit_strategy.md
skill-scanning-crawler/mcp/: README.md  mcp-not-needed-for-v1.md
skill-scanning-crawler/scripts/: build_demo_dataset.py
skill-scanning-crawler/tests/: conftest.py  test_pipeline.py
(+1553 files in other folders)
