[project]
name = "skill-scanning-crawler"
version = "0.1.0"
description = "Discovery and dataset acquisition pipeline for public agent skills."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.0",
  "diskcache>=5.6",
  "tenacity>=8.2",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
skill-scanning-crawler = "skill_scanning_crawler.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
  "integration: requires live GITHUB_TOKEN; skipped by default",
]
